level_zero-sys/src/ze_api.rs

#[doc = ""]
#[doc = " @brief Driver properties queried using ::zeDriverGetProperties"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_driver_properties_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in,out][optional] pointer to extension-specific structure"]
    pub pNext: *mut ::std::os::raw::c_void,
    #[doc = "< [out] universal unique identifier."]
    pub uuid: ze_driver_uuid_t,
    #[doc = "< [out] driver version"]
    #[doc = "< The driver version is a non-zero, monotonically increasing value where"]
    #[doc = "< higher values always indicate a more recent version."]
    pub driverVersion: u32,
}
#[test]
fn bindgen_test_layout__ze_driver_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_driver_properties_t>(),
        40usize,
        concat!("Size of: ", stringify!(_ze_driver_properties_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_driver_properties_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_ze_driver_properties_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_driver_properties_t>())).stype as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_driver_properties_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_driver_properties_t>())).pNext as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_driver_properties_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_driver_properties_t>())).uuid as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_driver_properties_t),
            "::",
            stringify!(uuid)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_driver_properties_t>())).driverVersion as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_driver_properties_t),
            "::",
            stringify!(driverVersion)
        )
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves properties of the driver."]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @remarks"]
    #[doc = "   _Analogues_"]
    #[doc = "     - **clGetPlatformInfo**"]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDriver`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pDriverProperties`"]
    pub fn zeDriverGetProperties(
        hDriver: ze_driver_handle_t,
        pDriverProperties: *mut ze_driver_properties_t,
    ) -> ze_result_t;
}
impl _ze_ipc_property_flags_t {
    #[doc = "< Supports passing memory allocations between processes. See"]
    #[doc = "< ::zeMemGetIpcHandle."]
    pub const ZE_IPC_PROPERTY_FLAG_MEMORY: _ze_ipc_property_flags_t = _ze_ipc_property_flags_t(1);
}
impl _ze_ipc_property_flags_t {
    #[doc = "< Supports passing event pools between processes. See"]
    #[doc = "< ::zeEventPoolGetIpcHandle."]
    pub const ZE_IPC_PROPERTY_FLAG_EVENT_POOL: _ze_ipc_property_flags_t =
        _ze_ipc_property_flags_t(2);
}
impl _ze_ipc_property_flags_t {
    pub const ZE_IPC_PROPERTY_FLAG_FORCE_UINT32: _ze_ipc_property_flags_t =
        _ze_ipc_property_flags_t(2147483647);
}
impl ::std::ops::BitOr<_ze_ipc_property_flags_t> for _ze_ipc_property_flags_t {
    type Output = Self;
    #[inline]
    fn bitor(self, other: Self) -> Self {
        _ze_ipc_property_flags_t(self.0 | other.0)
    }
}
impl ::std::ops::BitOrAssign for _ze_ipc_property_flags_t {
    #[inline]
    fn bitor_assign(&mut self, rhs: _ze_ipc_property_flags_t) {
        self.0 |= rhs.0;
    }
}
impl ::std::ops::BitAnd<_ze_ipc_property_flags_t> for _ze_ipc_property_flags_t {
    type Output = Self;
    #[inline]
    fn bitand(self, other: Self) -> Self {
        _ze_ipc_property_flags_t(self.0 & other.0)
    }
}
impl ::std::ops::BitAndAssign for _ze_ipc_property_flags_t {
    #[inline]
    fn bitand_assign(&mut self, rhs: _ze_ipc_property_flags_t) {
        self.0 &= rhs.0;
    }
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported IPC property flags"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_ipc_property_flags_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported IPC property flags"]
pub use self::_ze_ipc_property_flags_t as ze_ipc_property_flags_t;
#[doc = ""]
#[doc = " @brief IPC properties queried using ::zeDriverGetIpcProperties"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_driver_ipc_properties_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in,out][optional] pointer to extension-specific structure"]
    pub pNext: *mut ::std::os::raw::c_void,
    #[doc = "< [out] 0 (none) or a valid combination of ::ze_ipc_property_flags_t"]
    pub flags: ze_ipc_property_flags_t,
}
#[test]
fn bindgen_test_layout__ze_driver_ipc_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_driver_ipc_properties_t>(),
        24usize,
        concat!("Size of: ", stringify!(_ze_driver_ipc_properties_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_driver_ipc_properties_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_ze_driver_ipc_properties_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_driver_ipc_properties_t>())).stype as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_driver_ipc_properties_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_driver_ipc_properties_t>())).pNext as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_driver_ipc_properties_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_driver_ipc_properties_t>())).flags as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_driver_ipc_properties_t),
            "::",
            stringify!(flags)
        )
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves IPC attributes of the driver"]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDriver`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pIpcProperties`"]
    pub fn zeDriverGetIpcProperties(
        hDriver: ze_driver_handle_t,
        pIpcProperties: *mut ze_driver_ipc_properties_t,
    ) -> ze_result_t;
}
#[doc = ""]
#[doc = " @brief Extension properties queried using ::zeDriverGetExtensionProperties"]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct _ze_driver_extension_properties_t {
    #[doc = "< [out] extension name"]
    pub name: [::std::os::raw::c_char; 256usize],
    #[doc = "< [out] extension version using ::ZE_MAKE_VERSION"]
    pub version: u32,
}
#[test]
fn bindgen_test_layout__ze_driver_extension_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_driver_extension_properties_t>(),
        260usize,
        concat!("Size of: ", stringify!(_ze_driver_extension_properties_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_driver_extension_properties_t>(),
        4usize,
        concat!(
            "Alignment of ",
            stringify!(_ze_driver_extension_properties_t)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_driver_extension_properties_t>())).name as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_driver_extension_properties_t),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_driver_extension_properties_t>())).version as *const _
                as usize
        },
        256usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_driver_extension_properties_t),
            "::",
            stringify!(version)
        )
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves extension properties"]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @remarks"]
    #[doc = "   _Analogues_"]
    #[doc = "     - **vkEnumerateInstanceExtensionProperties**"]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDriver`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pCount`"]
    pub fn zeDriverGetExtensionProperties(
        hDriver: ze_driver_handle_t,
        pCount: *mut u32,
        pExtensionProperties: *mut ze_driver_extension_properties_t,
    ) -> ze_result_t;
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves devices within a driver"]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - Multiple calls to this function will return identical device handles,"]
    #[doc = "       in the same order."]
    #[doc = "     - The number and order of handles returned from this function is"]
    #[doc = "       affected by the ::ZE_AFFINITY_MASK and ::ZE_ENABLE_PCI_ID_DEVICE_ORDER"]
    #[doc = "       environment variables."]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDriver`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pCount`"]
    pub fn zeDeviceGet(
        hDriver: ze_driver_handle_t,
        pCount: *mut u32,
        phDevices: *mut ze_device_handle_t,
    ) -> ze_result_t;
}
